--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
 
   </body>
 </html>
