--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
+
     <title>React App</title>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <div class="root" id="root"></div>
-
   </body>
 </html>
