--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-
-    <title>React App</title>
-    <script id="react-dotenv" src="./env.js"></script>
+    <title>E-commerce site</title>
   </head>
   <body>
-    <div class="root" id="root"></div>
+    <script id="react-dotenv" src="./env.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
